Fix latest articles section on mobile

--- a/src/styles/blogpost.css
+++ b/src/styles/blogpost.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 20px;
+  min-height: 20px;
   background-color: #f3ebff;
   padding-left: 15px;
   padding-right: 15px;
